--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ set(script_files
   scripts/termux-microphone-record
   scripts/termux-nfc
   scripts/termux-notification
+  scripts/termux-notification-channel
   scripts/termux-notification-list
   scripts/termux-notification-remove
   scripts/termux-sensor
